k8s/base/ingress/base-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keystone-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/success-codes: '200,302'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/load-balancer-attributes: |
      idle_timeout.timeout_seconds=60,
      deletion_protection.enabled=true,
      routing.http2.enabled=true
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=false,load_balancing.algorithm.type=round_robin
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-Res-2021-06
    alb.ingress.kubernetes.io/enable-cors: "true"
    alb.ingress.kubernetes.io/cors-allow-headers: >-
      Authorization,Content-Type,X-Requested-With,Accept,Origin,X-Forwarded-For
    alb.ingress.kubernetes.io/cors-allow-methods: 'GET,POST,OPTIONS,DELETE,PUT'
    alb.ingress.kubernetes.io/cors-allow-credentials: 'true'
    alb.ingress.kubernetes.io/cors-expose-headers: '*, Authorization'
    alb.ingress.kubernetes.io/cors-max-age: '86400'

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: keystone-service
              port:
                number: 8000
  tls:
    - hosts:
        - greatify.us
      secretName: tls-secret
